# SDF-Painter

./: .gitignore  BUILD.bazel  CMakeLists.txt  Info.plist  OpenCL.pc  README.md  WORKSPACE  imgui.ini  meson.build  mingw-w64.txt  shell.dev  toolchain-mingw.cmake
.cache/clangd/index/: callbacks.c.862E93E657681DE0.idx  callbacks.cc.4CD1DA8EEEEC6C0F.idx  callbacks.h.8E54417BB3225361.idx  cimconfig.h.7125872C7F9D9455.idx  cimgui.cpp.45F990749CAD8901.idx  cimgui.h.A41BB2E2CBE85AE4.idx  components.h.A63D78FC1E9DF871.idx  imconfig.h.14BB0E4F5A322DC6.idx  imconfig.h.CBD5B5A614B2FCF8.idx  imgui.cpp.D9C0F87D5C1801B9.idx  imgui.cpp.FAA2597520CF5924.idx  imgui.h.5E545245AADB6451.idx  imgui.h.69D14E2E9CEF8B8E.idx  imgui_demo.cpp.00656ED015190D03.idx  imgui_demo.cpp.62D43A6EDA62FF7E.idx  imgui_draw.cpp.B0F4DB77676F87AA.idx  imgui_draw.cpp.DC3EED6127DF2DF2.idx  imgui_impl_glfw.cpp.2BBE3AFA8240C5CA.idx  imgui_impl_glfw.cpp.B0E8F2543EE30A38.idx  imgui_impl_glfw.h.3EEA9152F67C97E7.idx  imgui_impl_glfw.h.ED4422650D0A93F4.idx  imgui_impl_opengl3.cpp.9DAF68620E1AC1D7.idx  imgui_impl_opengl3.cpp.CA02606D6B531A59.idx  imgui_impl_opengl3.h.1281C9E6E205D84E.idx  imgui_impl_opengl3.h.13DB4721C43C61BE.idx  imgui_impl_opengl3_loader.h.35CA162D5B90A15C.idx  imgui_impl_opengl3_loader.h.E9D6568BD1E265AA.idx  imgui_internal.h.07CF0C16C2223E1A.idx  imgui_internal.h.1FAA4BF8CC2261E3.idx  imgui_tables.cpp.7277AD706E4AE406.idx  imgui_tables.cpp.7FF32C1A0358E704.idx  imgui_widgets.cpp.19C41FA229A07702.idx  imgui_widgets.cpp.9375AD15F9DAB47B.idx  imstb_rectpack.h.2EB7C870890C1A78.idx  imstb_rectpack.h.ED0D5DB87881411C.idx  imstb_textedit.h.2CF5A8B280A22045.idx  imstb_textedit.h.B1373F5D1D6D6804.idx  imstb_truetype.h.C0BA83EBB2788010.idx  imstb_truetype.h.EA8C336FB7101E54.idx  main.c.C9E87456F0054FA5.idx  (+9 more)
include/: advanced_math.hh  application.hh  callbacks.h  callbacks.hh  components.h  modificated_math.h  quad_fs.h  quad_fs.hh  shader.hh  utils.h  utils.hh  vec2_uint32_t.h  vec3.h
include/imgui/: imgui_impl_glfw.cpp
resources/: fragment_shader.glsl  hg_sdf.glsl  icon.icns  pyproject.toml  shader_test.py  vertex_shader.glsl
scripts/: build_and_run.sh  install_dependencies.py  run_shader_test.sh
src/: advanced_math.cc  application.c  application.cc  callbacks.c  callbacks.cc  main.c  main.cc  quad_fs.c  quad_fs.cc  sdf_engine_core.cc  shader.cc  utils.cc
