load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "glfw",
    srcs = glob(["@glfw//src/*.c"]),
    hdrs = glob(["@glfw//include/**/*.h"]),
    includes = ["@glfw//include"],
)

cc_library(
    name = "glew",
    srcs = glob(["@glew//src/*.c"]),
    hdrs = glob(["@glew//include/**/*.h"]),
    includes = ["@glew//include"],
)

cc_library(
    name = "opencl",
    srcs = [],
    hdrs = glob(["@opencl_headers//CL/*.h"]),
    includes = ["@opencl_headers//CL"],
)

cc_binary(
    name = "sdfe",
    srcs = [
        "src/main.c",
        "src/quad_fs.c",
    ],
    deps = [
        ":glfw",
        ":glew",
        ":opencl",
        "@platforms//:gl",  # Assuming you have a rule for GL
    ],
    includes = [
        "src",
        "include",
        "include/imgui",
    ],
    copts = ["-std=c++11"],
)
